[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Other/Succes.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/Menu/fdmenu.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/Menu/sprite238_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/Theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://Sprites/GUI/Menu/success_cadre.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GUI/Menu/unknowsucces.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Succes" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="fd" type="Sprite" parent="."]
position = Vector2( 510, 300 )
scale = Vector2( 3.375, 2.75 )
texture = ExtResource( 2 )

[node name="stars" type="Sprite" parent="."]
position = Vector2( 510, 300 )
scale = Vector2( 1.6875, 1.03125 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="InfoPlanet" type="TabContainer" parent="."]
margin_left = 9.0
margin_top = 2.0
margin_right = 1016.0
margin_bottom = 596.0
theme = ExtResource( 4 )
tab_align = 0

[node name="Succes" type="Tabs" parent="InfoPlanet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 52.0
margin_right = -8.0
margin_bottom = -8.0

[node name="0" type="Node2D" parent="InfoPlanet/Succes"]

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/0"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/0"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/0"]
margin_left = 116.0
margin_top = 18.0
margin_right = 377.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/0"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="1" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 330, 0 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/1"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/1"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/1"]
margin_left = 116.0
margin_top = 18.0
margin_right = 378.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/1"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="2" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 660, 0 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/2"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/2"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/2"]
margin_left = 116.0
margin_top = 18.0
margin_right = 367.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/2"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="3" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 0, 136.038 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/3"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/3"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/3"]
margin_left = 116.0
margin_top = 18.0
margin_right = 373.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/3"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="4" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 330, 136.038 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/4"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/4"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/4"]
margin_left = 116.0
margin_top = 18.0
margin_right = 378.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/4"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="5" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 660, 136.038 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/5"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/5"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/5"]
margin_left = 116.0
margin_top = 18.0
margin_right = 371.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/5"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="6" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 0, 275.574 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/6"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/6"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/6"]
margin_left = 116.0
margin_top = 18.0
margin_right = 372.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/6"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="7" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 330, 275.574 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/7"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/7"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/7"]
margin_left = 116.0
margin_top = 18.0
margin_right = 376.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/7"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="8" type="Node2D" parent="InfoPlanet/Succes"]
position = Vector2( 660, 275.574 )

[node name="cadre" type="AnimatedSprite" parent="InfoPlanet/Succes/8"]
position = Vector2( 62.4724, 64.148 )
frames = SubResource( 1 )

[node name="image" type="Sprite" parent="InfoPlanet/Succes/8"]
position = Vector2( 62.4724, 64.148 )
texture = ExtResource( 6 )

[node name="Titre" type="RichTextLabel" parent="InfoPlanet/Succes/8"]
margin_left = 116.0
margin_top = 18.0
margin_right = 374.0
margin_bottom = 76.0
rect_scale = Vector2( 0.789434, 0.819533 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Desc" type="RichTextLabel" parent="InfoPlanet/Succes/8"]
margin_left = 116.0
margin_top = 64.0
margin_right = 389.0
margin_bottom = 145.0
rect_scale = Vector2( 0.551226, 0.586406 )
theme = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0.635294, 0.701961, 1 )
text = "???"

[node name="Quitter" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 365.448
margin_top = 240.842
margin_right = 485.448
margin_bottom = 284.842
theme = ExtResource( 4 )
text = "Quitter"

[node name="gaucho" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.216
margin_top = 242.446
margin_right = -74.2162
margin_bottom = 286.446
theme = ExtResource( 4 )
text = "<"

[node name="macron" type="Label" parent="."]
margin_left = 458.626
margin_top = 549.598
margin_right = 510.626
margin_bottom = 577.598
theme = ExtResource( 4 )
text = "0 / 0"
align = 1

[node name="macron2" type="Label" parent="."]
margin_left = 68.4338
margin_top = 547.536
margin_right = 232.434
margin_bottom = 575.536
theme = ExtResource( 4 )
text = "0 / 0 Complétés"
align = 1

[node name="droitard" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 21.356
margin_top = 241.249
margin_right = 141.356
margin_bottom = 285.249
theme = ExtResource( 4 )
text = ">"

[node name="mouse" parent="." instance=ExtResource( 7 )]
position = Vector2( -28.3015, 12.1292 )
scale = Vector2( 3, 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Quitter" to="." method="_on_Quitter_pressed"]
[connection signal="pressed" from="gaucho" to="." method="_on_gaucho_pressed"]
[connection signal="pressed" from="droitard" to="." method="_on_droitard_pressed"]
